--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 
     <div class="container-narrow">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Rock</a></li>
-          <li><a href="#">Paper</a></li>
-          <li><a href="#">Scissors</a></li>
-        </ul>
         <h3 class="text-muted">Rock Paper Scissors</h3>
+        <ul class="nav nav-pills">
+          <li data-option="rock"><a href="#">Rock</a></li>
+          <li data-option="paper"><a href="#">Paper</a></li>
+          <li data-option="scissors"><a href="#">Scissors</a></li>
+        </ul>
       </div>
 
       <div class="jumbotron">
         <h1>Jumbotron heading</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-large btn-success" href="http://examples.getbootstrap.com/jumbotron-narrow/index.html#">Sign up today</a></p>
+        <p><a class="btn btn-large btn-success" href="#">Play</a></p>
       </div>
 
     </div> <!-- /container -->
