--- a/index.html
+++ b/index.html
@@ -20,20 +20,17 @@
 
   <body>
 
-    <div class="container-narrow">
-      <div class="header">
-        <h3 class="text-muted">Rock Paper Scissors</h3>
-        <ul class="nav nav-pills">
-          <li data-option="rock"><a href="#">Rock</a></li>
-          <li data-option="paper"><a href="#">Paper</a></li>
-          <li data-option="scissors"><a href="#">Scissors</a></li>
-        </ul>
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="text-muted text-center">Rock Paper Scissors</h2>
       </div>
+    </div>
 
-      <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-large btn-success" href="#">Play</a></p>
+    <div>
+      <div class="row">
+        <div class="col-lg-5 text-center">leap</div>
+        <div class="col-lg-2 text-center"><a class="btn btn-large btn-success" href="#">Play</a></div>
+        <div class="col-lg-5 text-center">random</div>
       </div>
 
     </div> <!-- /container -->
