Structure for the Leap Added

--- a/options.html
+++ b/options.html
@@ -27,14 +27,17 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-5 text-center">
-        <div class="score user">1</div>
-        <div class="main-content">Piedra</div>
-      </div>
-      <div class="col-lg-2 text-center"><a class="btn btn-large btn-success text-center" href="#">Play</a></div>
-      <div class="col-lg-5 text-center">
-        <div class="score computer">2</div>
-        <div class="main-content">Tijera</div>
+      <div class="col-lg-12 text-center">
+        <h4 class="options-title">Welcome to the Rock Paper Scissors game!</h4>
+        <p>Please tell us what is your name: <input type="text" id="user_name"  /></p>
+        <p>And also, which color you would like to use?</p>
+        <form>
+          <input type="radio" name="color" value="red">Red<br>
+          <input type="radio" name="color" value="blue">Blue<br>
+          <input type="radio" name="color" value="green">Green<br>
+          <input type="radio" name="color" value="yellow">Yellow
+        </form>
+        <a class="btn btn-large btn-default text-center" href="#">Play the Game!</a>
       </div>
     </div>
 
